# nowifi

./: .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  demo.cast  demo.tape  go.mod  go.sum  install.sh  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  osv-scanner.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
.reasonix/truncated-results/: 1782313557762-15f0c969-fs_read_text_file.txt  1782313628146-8137ebb7-fs_read_text_file.txt  1782313658123-d785eb2d-fs_read_text_file.txt  1782313685702-31c09748-fs_read_text_file.txt
demo/: README.md  record.sh
docs/: ENTERPRISE-DESIGN.md  EVASION-DESIGN.md  GO-REWRITE-DESIGN.md  LIBP2P-PROVIDER-DESIGN.md  RESEARCH.md  SECURITY-REGRESSION-CHECKLIST.md
forensics/: CUTOFF-FINDINGS.md  NEXT-FLIGHT-PLAYBOOK.md  RUNBOOK-flight-cutoff.md  SAS-FLIGHT-OFFLINE-CHECKLIST.md  SPARK-RELAY.md  baseline-20260529T182215Z.txt  captive-forensics.sh  flight-connect.sh  holes-20260529T182618Z.json  holes-20260529T182618Z.txt  nmap-intel-20260529T191543Z.txt  paxapi-intel-20260529T191837Z.txt  portal-intel-20260529T191802Z.txt
go/: .gitignore  .golangci.yml  .goreleaser.yml  Makefile  go.mod  go.sum
homebrew/: nowifi.rb
tests/: conftest.py  test_bypass.py  test_cli.py  test_crack.py  test_detect.py  test_diagnose.py  test_monitor.py  test_platform_mac.py  test_probe.py  test_report.py  test_server.py  test_toolchain.py  test_tunnel.py
(+270 files in other folders)
