[project]
name = "nowifi"
version = "0.1.0"
description = "WiFi security assessment tool — 23 automated bypass techniques"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
    "rich>=13.0",
    "dnspython>=2.6",
]

[project.optional-dependencies]
gui = [
    "nicegui>=3.0",
    "rumps>=0.4",
]
full = [
    "scapy>=2.5",
    "beautifulsoup4>=4.12",
    "pysocks>=1.7",
    "nicegui>=3.0",
    "rumps>=0.4",
]

[project.scripts]
nowifi = "nowifi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nowifi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
